--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,6 @@
 <!DOCTYPE html>
+<link href="https://cdn.jsdelivr.net/npm/@mdi/font/css/materialdesignicons.min.css" rel="stylesheet">
+
 <html lang="">
   <head>
     <meta charset="utf-8">
